client/src/scss/ToyBox.scss
@import './palette';
@import './mixins';

.ToyBox {
  @include ComponentWrapper();
  margin-top: 5rem;

  @media (max-width: 475px) {
    margin-top: 14rem;
  }
}

.ToyBox__body {
  align-items: center;
  display: flex;
  flex-direction: column;
  margin-top: -3rem;
  max-width: 800px;
  z-index: 1;

  header {
    display: flex;
    h3 {
      color: $dark-text2;
      font-size: 2rem;
    }
  }
}

.ToyBox__buttons {
  align-items: center;
  display: flex;
  justify-content: center;
  margin: 4rem;
  width: 100%;

  @media (max-width: 475px) {
    flex-direction: column;
  }

  span {
    display: flex;
    flex-direction: column;
    align-items: center;
    cursor: pointer;
    font-size: 8rem;
    margin: 2rem 2rem;
    transition: all 0.3s ease;

    &:after {
      font-size: 1rem;
    }

    &:hover {
      font-size: 10rem;
      transition: all 0.3s ease;
    }

    &.drum:after {
      content: 'DrumMachine.js';
    }
    &.guitar:after {
      content: 'GuitBox.js';
    }
  }
}

